BuildHughes/translation-tool/inputs/source_meta/objects/Common_TableSearch__c.object
<CustomObject>
    <fields>
        <fullName>Advanced_Search_SOQL_Query__c</fullName>
        <label>Advanced Search SOQL Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Column__c</fullName>
        <label>Child Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_TableComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Common TableComponent</label>
        <referenceTo>Common_TableComponent__c</referenceTo>
        <relationshipLabel>Common TableSearches</relationshipLabel>
        <relationshipName>Common_TableSearches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Filter_Child_Column__c</fullName>
        <label>User Filter Child Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Filter_Column__c</fullName>
        <label>Default Filter Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Filter_Value_SOQL__c</fullName>
        <label>User Filter Value SOQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Join_Column__c</fullName>
        <label>Join Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Search_characters__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Minimum Search characters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_By__c</fullName>
        <label>Order By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placeholder_Text__c</fullName>
        <label>Placeholder Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Values__c</fullName>
        <label>Possible Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <label>Search Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_algorithm__c</fullName>
        <label>Search algorithm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contains</fullName>
                    <default>true</default>
                    <label>Contains</label>
                </value>
                <value>
                    <fullName>Begin with</fullName>
                </value>
                <value>
                    <fullName>Ends with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <label>Where</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common TableSearch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Common_TableComponent__c</columns>
        <columns>NAME</columns>
        <columns>Advanced_Search_SOQL_Query__c</columns>
        <columns>Child_Column__c</columns>
        <columns>Default_Filter_Column__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Order_By__c</columns>
        <columns>Possible_Values__c</columns>
        <columns>Search_Type__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Default_Filter_Child_Column__c</columns>
        <columns>Default_Filter_Value_SOQL__c</columns>
        <columns>Where__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Common TableSearch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common TableSearches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>